Tracking survey responses with daily completion

--- a/web/src/theme.scss
+++ b/web/src/theme.scss
@@ -4,6 +4,7 @@ $info: #17AC80;
 
 $theme-colors: (
     "primary": $primary,
+    "primary-dark": #105EA8,
     "secondary": #858796,
     "info": $info,
     "success": #28a745,
